# eigenut

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  package.xml
cmake/: cpput_config.cmake  eigenut_add_test.cmake
cpput/: .gitignore  CMakeLists.txt  Makefile
cpput/include/cpput/: all.h  cpput_config.h.in
cpput/test/: inclusion.cpp
examples/: eigen_output_formats.cpp  eigen_output_formats.output
include/eigenut/: all.h  blockmatrix.h  blockmatrix.h.in  blockmatrix_base.h  blockmatrix_kronecker.h  cross_product.h  cross_product.h.in  eigenut_config.h.in  misc.h  misc.h.in  types.h
include/eigenut/cpput/: config.h.in  exception.h
test/: CMakeLists.txt  blockmatrix.cpp  inclusion.cpp  misc.cpp
